test/spec_vectors/func/fail/module_42.wat
(module (func $type-return-last-num-vs-nums (result i64 i64) (return (i64.const 0))))